tests/reference/asr-test_dict13-683b290.stderr
semantic error: 'dict' key type cannot be float/complex because resolving collisions by exact comparison of float/complex values will result in unexpected behaviours. In addition fuzzy equality checks with a certain tolerance does not follow transitivity with float/complex values.
 --> tests/errors/test_dict13.py:3:5
  |
3 |     mydictionarty3: dict[float, int] = {}
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
